<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_add">

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.prodon.ui.add.AddFragment"
        android:label="@string/add_player"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/nav_find"
        android:name="com.example.prodon.ui.find.FindFragment"
        android:label="@string/find_player"
        tools:layout="@layout/fragment_find" />

    <fragment
        android:id="@+id/nav_coach"
        android:name="com.example.prodon.ui.coaches_groups.CoachFragment"
        android:label="@string/coach_groups"
        tools:layout="@layout/fragment_coaches" />
</navigation>