<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >
        <EditText
            android:id="@+id/FName"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@drawable/custom_input"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/first_name" />
        <EditText
            android:id="@+id/LName"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@drawable/custom_input"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/last_name" />
        <EditText
            android:id="@+id/parentName"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@drawable/custom_input"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/parent_name" />

        <EditText
            android:id="@+id/parentPhone"
            android:drawableStart="@drawable/ic_baseline_numbers_24"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@drawable/custom_input"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/parent_phone" />

        <EditText
            android:id="@+id/playerPhone"
            android:drawableStart="@drawable/ic_baseline_numbers_24"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:layout_marginTop="12dp"
            android:inputType="phone"
            android:hint="@string/player_phone"/>
        <EditText
            android:id="@+id/year"
            android:drawableStart="@drawable/ic_baseline_calendar_month_24"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:layout_marginTop="12dp"
            android:inputType="number"
            android:hint="@string/birth_year"/>


        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:layout_gravity="center"
            android:text="@string/register" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            />


    </LinearLayout>
</ScrollView>